--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pathfinder",
+  "name": "react-pathfinder",
   "version": "0.2.0",
   "description":
     "A React-based Library, which can be used for developing keyboard/remote controller handling in SPA and smartTV apps",
@@ -12,5 +12,29 @@
     "name": "Ilya Ozerov",
     "email": "arnage92@gmail.com"
   },
-  "license": "MIT"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arnage/react-pathfinder.git"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/arnage/react-pathfinder/issues"
+  },
+  "homepage": "https://github.com/arnage/react-pathfinder",
+  "devDependencies": {
+    "eslint": "^4.7.2",
+    "eslint-plugin-react": "^7.4.0",
+    "flow-bin": "^0.56.0",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-env": "^1.5.1"
+  },
+  "dependencies": {
+    "react": "^15.6.1",
+    "lodash": "~4.17.4",
+    "webpack": "^2.6.1"
+  }
 }
