--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "react-pathfinder",
-  "version": "0.2.1",
+  "version": "0.2.1-rc.4",
   "description":
     "A React-based Library, which can be used for developing keyboard/remote controller handling in SPA and smartTV apps",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,19 +22,24 @@
   },
   "homepage": "https://github.com/arnage/react-pathfinder",
   "devDependencies": {
-    "eslint": "^4.7.2",
-    "eslint-plugin-react": "^7.4.0",
-    "flow-bin": "^0.56.0",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.5.1"
+    "babel-preset-env": "^1.5.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^4.7.2",
+    "eslint-plugin-react": "^7.4.0",
+    "flow-bin": "^0.56.0"
   },
   "dependencies": {
     "react": "^15.6.1",
-    "lodash": "~4.17.4",
-    "webpack": "^2.6.1"
+    "lodash": "~4.17.4"
   }
 }
